- fixed warning about deprecated Jetty configuration (Jira APPSERVER-115)
- fixed possible deadlock involving PersistableAttributeStore and Scope
  (Jira APPSERVER-122)
- display better message if RMI connection to "rmiregistry" could not
  be established (Jira APPSERVER-125)
- Python scripts can import classes available only in the classpath of a
  webapp (Jira APPSERVER-92)
- fixed Ruby application issue by updating to Spring 2.0.5 and JRuby 0.9.8 (Jira APPSERVER-93)

Red5 0.6    (2007-04-23)
------------------------
New features:
- Recording/playback of files to/from subscopes implemented
  (Jira APPSERVER-103)

Bugfixes:
- ghost connection detection code rewritten to better detect dead clients
  (Jira APPSERVER-38, SN-37)
- deserialization of objects defined in webapp classpath fixed
  (Jira APPSERVER-80, APPSERVER-100)
- fixed AMF3 deserializer for references from attributes to parent classes
  (Jira APPSERVER-101)
- Jython example adjusted for new bandwidth API (Jira APPSERVER-92)
- workaround added to deal with broken MP3 files (Jira APPSERVER-62)
- "start" and "length" are properly evaluated when playing back VOD streams
- fixed seeking not working for MP3 or audio-only FLV files
- don't log contents of wrong objects (Jira APPSERVER-109)
- fixed potential NPEs in PlaylistSubscriberStream
- a client buffer of 0 on live streams no longer breaks playback (Jira CS-3)
- fixed shutdown error in Tomcat with WAR version by updating to SLF4J 1.3.1
  (Jira APPSERVER-107)
- "NetStream.Play.InsufficientBW" is sent if client is too slow receiving
  video streams (Jira APPSERVER-51)
- improved frame dropping code for slow connections


Red5 0.6rc3 (2007-04-11)
------------------------
New features:
- Keyframe informations are cached so files don't need to be reparsed
  before playback
- Connections from Flash Media Encoder and On2 Flix Live supported
- Access to shared objects can be limited (Jira APPSERVER-25)